manifests/leaderboards.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: leaderboards
  labels:
    app: leaderboards
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
  selector:
    app: leaderboards
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: leaderboards
  labels:
    app: leaderboards
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: leaderboards
    spec:
      containers:
        - name: leaderboards
          image: anthonyamanse/kitura-leaderboards:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
