manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/tls-acme: "True"
    ingress.bluemix.net/redirect-to-https: "True"
  name: ingress
spec:
  tls:
    - hosts:
        - www.ibm-fitchain.com
      secretName: ibm-fitchain-com-tls
    - hosts:
        - anthony-dev.us-south.containers.mybluemix.net
      secretName: anthony-dev
  backend:
    serviceName: users
    servicePort: 8080
  rules:
    - host: www.ibm-fitchain.com
      http:
        paths:
          - path: /users
            backend:
              serviceName: users
              servicePort: 8080
          - path: /shop
            backend:
              serviceName: shop
              servicePort: 8080
          - path: /leaderboard
            backend:
              serviceName: leaderboard
              servicePort: 8080
    - host: anthony-dev.us-south.containers.mybluemix.net
      http:
        paths:
          - path: /users
            backend:
              serviceName: users
              servicePort: 8080
          - path: /shop
            backend:
              serviceName: shop
              servicePort: 8080
          - path: /leaderboard
            backend:
              serviceName: leaderboard
              servicePort: 8080
